--- a/index/style.css
+++ b/index/style.css
@@ -1,16 +1,31 @@
 @charset "UTF-8";
 
 /*すべてのWebページに適応される*/
-html
-{
+html{
 	font-family: sans-serif;
 }
-body
-{
+html * {
+	box-sizing:border-box;
+}
+body{
 	background-color: #ccffff;
 }
-h2
-{
+main{
+	border: solid #00bfff;
+}
+h2{
 	color: #3f5170;
 	font-size: 22px;
+	border-bottom:3px dotted #3f5170
+	margin-top: 20px;
+	margin-right: 0px;
+	margin-bottom: 20px;
+	margin-left: 0px;
+	padding-right: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+
+}
+p{
+	line-height: 1.6;
 }
