--- a/index/style.css
+++ b/index/style.css
@@ -27,7 +27,7 @@ h2 {
 
 }
 p {
-	line-height: 2.6;
+	line-height: 1.6;
 }
 a:link {
 	color: #d25833;
@@ -48,7 +48,7 @@ a:active{
 	line-height: 0;
 	text-align: center;
 }
-.navi li {
+.nav li {
 	display: inline;
 	list-style-type: none;
 	padding-right: 40px;
