--- a/index/style.css
+++ b/index/style.css
@@ -51,5 +51,6 @@ a:active{
 .nav li {
 	display: inline;
 	list-style-type: none;
-	padding-right: 40px;
+	padding-right: 100px;
+	font-size: 15px;
 }
