--- a/index/style.css
+++ b/index/style.css
@@ -57,6 +57,6 @@ a:active{
 .nav ul {
 	margin: 0 0 0 0;
 	padding: 20px 10px 15px 20px;
-	background-image: url(C:/Users/tmkma/OneDrive/ドキュメント/GitHub/penokumaLOG/img/bgi.jpg);
+	background-image: url(../img/bgi.jpg);
 	background-repeat: repeat-x;
 }
