--- a/index/style.css
+++ b/index/style.css
@@ -58,5 +58,5 @@ a:active{
 	margin: 0 0 0 0;
 	padding: 20px 10px 15px 20px;
 	background-image: url(../img/footer-bg.png);
-	background-repeat: repeat-x;
+	background-repeat: repeat;
 }
