--- a/index/style.css
+++ b/index/style.css
@@ -1,4 +1,4 @@
-c@charset "UTF-8";
+ c@charset "UTF-8";
 
 /*すべてのWebページに適応される*/
 html {
@@ -8,7 +8,12 @@ html * {
 	box-sizing:border-box;
 }
 body {
+	margin: 0 0 0 0;
 	background-color: #ccffff;
+}
+.wrapper {
+	margin:0 auto 0 auto;
+	max-width: 960px;
 }
 main {
 	border: solid #00bfff;
@@ -59,5 +64,43 @@ a:active{
 	margin: 0 0 0 0;
 	padding: 20px 10px 100px 20px;
 	background-image: url(footer-bg.png);
-	background-repeat: repeat;
+	background-repeat: repeat-x;
+}
+.nav a:link
+	{
+	color: #3c454d;
+	text-decoration: none;
+	}
+.nav a:visited
+	{
+	color: #3c454d;
+	text-decoration: none;
+	}
+.nav a:hover
+	{
+	color: #3c454d;
+	text-decoration: none;
+	}
+.nav a:active
+	{
+	color: #5a9bc0
+	text-decoration: none;
+	}
+/*すべてのページに適応　-　フッター　- */
+.footer{
+	background-image:url(footer-bg.png);
+	background-repeat: no-repeat;
+	margin-top: 30px;
+	padding: 80px 15px 20px 15px;
+	font-size: 12px;
+	color: 3f5170;
+}
+
+/* 個別のスタイル　*/
+/* index.html */
+.keyvisual{
+	margin: 15px 0 0 0;
+}
+.news-item{
+	margin: 9;
 }
