--- a/index/style.css
+++ b/index/style.css
@@ -1,8 +1,13 @@
 @charset "UTF-8";
 
 /*すべてのWebページに適応される*/
+.rtime{
+	float:right;
+	
+}
 html {
-	font-family:"HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
+	font-family:"HGMaruGothicMPRO","HG丸ｺﾞｼｯｸM-PRO";
+	
 }
 html * {
 	box-sizing:border-box;
@@ -15,6 +20,10 @@ body {
 	margin:0 auto 0 auto;
 	max-width: 960px;
 }
+p{
+	font-size : 17px;
+	line-height: 2;
+}
 /*.news {
 	border: solid #00bfff;
 }
@@ -22,51 +31,55 @@ body {
 h2 {
 	color: #3f5170;
 	font-size: 22px;
-	border-bottom:5px dotted #3f5170
-	margin-top: 20px;
-	margin-right: 0px;
+	border-bottom:5px dotted #3f5170;
+	margin-top: 0px;
+	margin-right: 10px;   		/*  	margin-right: 20px;		  */
 	margin-bottom: 30px;
-	margin-left: 0px;
+	margin-left: 10px;
+	padding-top: 20px;
 	padding-right: 5px;
 	padding-bottom: 20px;
 	padding-left: 5px;
 
 }
-p {
-	line-height: 1.6;
-}
+
 a:link {
-	color: #d25833;
+	color: #0000ff;
 }
-a:visited {
-	color: #d25833;
+a:visited{
+	color: #0000ff;
 }
 a:hover {
-	color: #e3937a;
+	color: #00bfff;
 }
 a:active{
-	color: #ff6a3b;
+	color: #7fffd4;
 }
 
 /*すべてのページに適応　-　ヘッダー　-　*/
 
 .logo {
+	
+	font-size: 40px;
 	margin: 70px auto 50px auto;
 	line-height: 0;
 	text-align: center;
+	
 }
-.nav ul {
+/*.nav ul {
 	margin: 0 auto 0 auto;
 	padding: 11px 5px 10px 100px;
 	background-image: url(images/footer-bg.png);
 	background-repeat: no-repeat;
 	max-width: 960px;
 }
-.nav ul img{
+*/
+/*.nav ul img{
 	float: right;
 	width: 97%;
 	display: flex;
 }
+*/
 .nav li {
 	display: inline;
 	list-style-type: none;
@@ -141,10 +154,13 @@ a:active{
 	}
 .nav a:active
 	{
-	color: #5a9bc0
+	color: #5a9bc0;
 	text-decoration: none;
 	}
 /*すべてのページに適応　-　フッター　- */
+.white{
+	display: none;
+}
 .footer{
 	background-image:url(images/footer-bg.png);
 	background-repeat: no-repeat;
@@ -153,9 +169,17 @@ a:active{
 	font-size: 12px;
 	color: #3f5170;
 }
+.full-flame{
+	padding: 10px 20px 10px 20px;
+   	margin:  10px;              /* 外側の余白 */
+	border-radius:  20px;        /* 角丸指定 */
+	font-size: auto;           /* 文字サイズ */
+	background-color:  #c0c0c0; /* 背景色指定 */
+}
 
 /* 個別のスタイル　*/
 /* index.html */
+
 iframe{
 	border: none;
 }
@@ -187,10 +211,10 @@ iframe{
 	
 }
 .news-item{
-	padding: 10px 20px 10px 20px;
+	padding: 10px 30px 20px 30px;
    	margin:  10px;              /* 外側の余白 */
 	border-radius:  20px;        /* 角丸指定 */
-	font-size: auto;           /* 文字サイズ */
+	font-size: 14px;           /* 文字サイズ */
 	background-color:  #c0c0c0; /* 背景色指定 */
 }
 .profile{
@@ -213,6 +237,92 @@ iframe{
 	padding: 10px 10px 5px 10px;
 	
 }
+/* news.html */
+h3 {
+	color: #3f5170;
+	font-size: 5px;
+	border-bottom:5px dotted #3f5170;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	margin-left: 0px;
+	padding-right: 5px;
+	padding-bottom: 10px;
+	padding-left: 5px;
+
+}
+.news-item p{
+	font-size: 15px;
+
+}
 
 /**/
 
+.container a:visited{
+	color: #0000ff;
+}
+.container a:hover {
+	color: #00bfff;
+}
+.container a:active{
+	color: #7fffd4;
+}
+
+.container {
+	padding: 5px 50px 40px 50px;
+   	margin:  10px;              /* 外側の余白 */
+	border-radius:  20px;        /* 角丸指定 */
+	font-size: 20px;           /* 文字サイズ */
+	background-color:  #c0c0c0; /* 背景色指定 */
+}
+.container_Achi{
+	padding: 40px 50px 30px 50px;
+   	margin:  10px;              /* 外側の余白 */
+	border-radius:  20px;        /* 角丸指定 */
+	font-size: 20px;           /* 文字サイズ */
+	background-color:  #c0c0c0; /* 背景色指定 */
+}
+.contents {
+	padding: 0px 50px 20px 10px;
+   	margin:  10px;              /* 外側の余白 */
+	font-size: 20px;           /* 文字サイズ */
+	background-color:  #c0c0c0; /* 背景色指定 */;
+}
+/* lecture.html */
+.child_ol li{
+	line-height:1.5;
+}
+.contents ol {
+    /*background-color: #464646;*/
+    padding-left: 0;
+    list-style: none;
+    counter-reset: none;
+    padding: 20px;
+}
+.container_lecture{
+	padding: 40px 50px 30px 50px;
+   	margin:  20px;              /* 外側の余白 */
+	border-radius:  20px;        /* 角丸指定 */
+	font-size: 20px;           /* 文字サイズ */
+	background-color:  #c0c0c0; /* 背景色指定 */
+}
+.container_lecture ol{
+	list-style: none;
+}
+.container_lecture h2{
+	color: #000;
+	font-size: 22px;
+	border-bottom:5px dotted #4169E1;
+	margin-top: 20px;
+	margin-right: 0px;
+	margin-bottom: 30px;
+	margin-left: 0px;
+	padding-right: 5px;
+	padding-bottom: 20px;
+	padding-left: 5px;
+
+}
+.schapter_sub h0{
+	float:left;
+	font-size: 100px;
+}
